Ook bij signup form geregeld dat het wachtwoord zichtbaar en onzichtbaar is bij drukken op oog-icoon. Icoon verandert ook.

--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "@material/button": "^13.0.0",
     "@material/textfield": "^13.0.0",
+    "firebase": "^9.6.10",
     "material-components-web": "^13.0.0"
   },
   "scripts": {
