--- a/package.json
+++ b/package.json
@@ -2,7 +2,7 @@
   "dependencies": {
     "@material/button": "^13.0.0",
     "@material/textfield": "^13.0.0",
-    "firebase": "^9.6.10",
+    "firebase": "^9.6.11",
     "material-components-web": "^13.0.0"
   },
   "scripts": {
@@ -17,5 +17,16 @@
     "webpack": "^5.71.0",
     "webpack-cli": "^4.9.2",
     "webpack-dev-server": "^4.8.1"
-  }
+  },
+  "name": "printpal",
+  "description": "Project \"PrintPal\", for ProjectB Sogeti.",
+  "version": "1.0.0",
+  "main": "service-worker.js",
+  "repository": {
+    "type": "git",
+    "url": "https://git.fhict.nl/I441782/printpal.git"
+  },
+  "keywords": [],
+  "author": "",
+  "license": "ISC"
 }
