Created lot of styling and content for home page

--- a/package.json
+++ b/package.json
@@ -1,6 +1,7 @@
 {
   "dependencies": {
     "@material/button": "^13.0.0",
+    "@material/card": "^14.0.0",
     "@material/textfield": "^13.0.0",
     "firebase": "^9.6.11",
     "material-components-web": "^13.0.0"
