Foute slogan veranderd naar de juiste in de PWA

--- a/manifest.json
+++ b/manifest.json
@@ -1,6 +1,6 @@
 {
   "short_name": "Printpal",
-  "name": "Printpal: Print to meet your new pal!",
+  "name": "Printpal: You're not alone.",
   "icons": [
     {
       "src": "images/printpal512icon.png",
